# echidna

./: agent_capabilities.json  config.json
Payload_Type/echidna/: .dockerignore  Dockerfile  main.py  requirements.txt
Payload_Type/echidna/echidna/agent_code/: .env.default  .gitignore  Cargo.toml  test.sh
Payload_Type/echidna/echidna/agent_code/.cargo/: config.toml
Payload_Type/echidna/echidna/agent_code/shared/: Cargo.toml  build.rs
Payload_Type/echidna/echidna/agent_code/shared/src/: lib.rs
Payload_Type/echidna/echidna/agent_code/src/: agent.rs  exit.rs  jobs.rs  lib.rs  main.rs  payloadvars.rs  rootkit_commands.rs  shell.rs  sleep.rs  tasking.rs  upload.rs  workinghours.rs
Payload_Type/echidna/echidna/agent_code/src/bridge/: mod.rs
Payload_Type/echidna/echidna/agent_code/src/commands/: deploy.rs  mod.rs  rootkit_commands.rs  shell.rs  upload.rs
Payload_Type/echidna/echidna/agent_code/src/profiles/: http.rs  mod.rs
Payload_Type/echidna/echidna/agent_code/src/rootkit/: mod.rs
Payload_Type/echidna/echidna/agent_code/src/rootkit/lkm/: mod.rs  userspace.rs
Payload_Type/echidna/echidna/agent_code/src/utils/: linux.rs  mod.rs
Payload_Type/echidna/echidna/mythic/: __init__.py
Payload_Type/echidna/echidna/mythic/agent_functions/: __init__.py  builder.py  deploy.py  hide_process.py  shell.py  upload.py
Payload_Type/echidna/echidna/mythic/agent_functions/commands/: deploy.py  rootkit_status.py  shell.py  upload.py
