[workspace]
members = ["shared"]

[package]
name = "echidna"
version = "0.1.0"
authors = ["Jamie"]
edition = "2021"


[profile.release]
strip = "symbols"

[dependencies]
aes = "0.7.5"
base64 = "0.13"
block-modes = "0.8.1"
cfg-if = "1.0"
chrono = "0.4"
hmac = "0.11"
path-clean = "0.1.0"
rand = "0.8"
serde_json = "1.0"
sha2 = "0.9.8"
netstat2 = "0.11.1"

[dependencies.minreq]
version = "2.4.2"
features = ["https-rustls-probe"]

[dependencies.openssl]
version = "0.10.45"
features = ["vendored"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.ssh2]
version = "0.9.3"
features = ["vendored-openssl"]

[dependencies.tokio]
version = "1.16.1"
features = ["net", "rt-multi-thread", "io-util", "macros", "process"]

libc = "0.2"